welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: object toInt is not a member of package ch
	p =ch.toInt(litMessageInt());
              ^Array2:27: error: not found: value setBrosseCouleur
	setBrosseCouleur(k + p);
        ^